--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ build-backend = "hatchling.build"
 [project]
 name = "botobot"
 version = "0.1.0"
-description = "Add your description here"
+description = "aws access assistant"
+authors = [
+    { name="Yoni Gottesman", email="yonigo10@gmail.com" }
+]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.8"
 dependencies = [
     "anthropic>=0.49.0",
     "boto3>=1.37.22",
